package model;

public class Ticket {
    private final long number; // unique numeric
    public Ticket(long number) { this.number = number; }
    public long number() { return number; }
}
